style.css
/*
Theme Name: iWelcome Theme
Author: Stephanie Tran
Author URI: https://stran.codes
Description: 
Version: 1.0
*/

/*--------------------------------------------------------------
        Globals
--------------------------------------------------------------*/
html,
body {
    height: 100%;
    background-color: white;
}
body {
    font-family: "Roboto",sans-serif;
    font-size: 20px;
    line-height: 1.4;
}
a {
    color: #000000;
}
a:hover {
    text-decoration: none;
}
h1,h2,h3,h4,h5,h6{
    font-family: "TradeGothicW01-BoldCn20_675334",sans-serif;
    line-height: 1;
}
h1{
    font-size:200%;
}
h2{
    font-size:170%;
}
h3{
    font-size:150%;
}
ul,li{
    list-style:none;
}
.masthead {
    width: 100%;
    background-color: white;
}
.masthead h1 {
    color: black;
    font-size: 300%;
    text-shadow: none;
    float: left;
    padding-left: 20px;
}
.site-content{
    width:100%;
    overflow:hidden;
}
.site-title {
    padding-left: 20px;
}
.site-wrapper {
    display: table;
    width: 100%;
    height: 100%;
    /* For at least Firefox */
    min-height: 100%;
}
.site-wrapper-inner {
    display: table-cell;
    vertical-align: top;
}
.cover-container {
    margin-right: auto;
    margin-left: auto;
}
.inner {
    padding: 30px;
}
main{
    padding-bottom:50px;
}
/* Social Nav */

.menu-social-container {
    display: block;
    position: fixed;
    left: -20px;
    bottom: 20px;
}

.icon {
    width: 30px;
    height: 75px;
    fill: white;
    -webkit-filter: drop-shadow( 1px -2px 5px #000);
    filter: drop-shadow( 1px -2px 5px #000);
}
/*--------------------------------------------------------------
        Frontpage
--------------------------------------------------------------*/
.float-left {
    display: table-cell;
    vertical-align: bottom;
    text-align: left;
    width: 50%;
}
.float-right {
    display: table-cell;
    text-align: right;
    vertical-align: bottom;
    width: 30%;
    font-size:450%;
}
.center{
    text-align:center;
}
.intro-head {
    font-size: 170%;
}
.page .mastfoot {
	background-color:grey;
	color:white;
	font-size:80%;
	width:100%;
	box-shadow:2px 2px 5px #000;
    text-align:center;
}
/* Grid */
.grid-cell-container a{
    font-family: "TradeGothicW01-BoldCn20_675334",sans-serif;
    line-height: 1;
}
.first-box {
    display: table;
    height: 400px;
    background-color: yellow;
    color: black;
    font-size: 200%;
}
.grid-cell-container{
	position: relative;
	clear: both;
	margin: 0 auto;
}
.img-container {
    overflow: hidden;
	position: relative;
	overflow: hidden;
}

.img-container:hover {
    overflow: hidden;
}
.post-title-link img {
    transition: filter .5s ease-in-out;
    -webkit-filter: grayscale(100%);
    /* Ch 23+, Saf 6.0+, BB 10.0+ */
    filter: grayscale(100%);
    /* FF 35+ */
    width: 100%;
}
.post-title-link:hover img {
    webkit-filter: grayscale(0%);
    /* Ch 23+, Saf 6.0+, BB 10.0+ */
    filter: grayscale(0%);
    /* FF 35+ */
}
.post-title-link:hover .grid-title{
	opacity:1;
	left:0px;
}
.post-title-link .grid-title {
    opacity:0;
	display: block;
	background-color: rgba(0, 0, 0, 0.6);
	text-shadow: 0 0 2px black;
	color: white;
	padding: 10px 10px 10px 30px;
	font-size: 150%;
    text-align: right;
	width: 70%;
    position: absolute;
    bottom: 20%;
	left:-100px;
	transition: all .2s ease-in;
}
.grid-outer {
    -webkit-column-count: 3;
    /* Chrome, Safari, Opera */
    -moz-column-count: 3;
    /* Firefox */
    column-count: 3;
    column-gap: 0px;
}
.grid-outer li {
    width: 100%;
    padding: 0px;
}
.grid-outer li:last-child {
    background-color: yellow;
    padding: 20px;
}
@media (max-width: 950px) {
    .grid-outer {
        -webkit-column-count: 2;
        /* Chrome, Safari, Opera */
        -moz-column-count: 2;
        /* Firefox */
        column-count: 2;
    }
}
@media (max-width: 700px) {
    .grid-outer {
        -webkit-column-count: 2;
        /* Chrome, Safari, Opera */
        -moz-column-count: 2;
        /* Firefox */
        column-count: 2;
    }
}
@media (max-width: 500px) {
    .grid-outer {
        -webkit-column-count: 1;
        /* Chrome, Safari, Opera */
        -moz-column-count: 1;
        /* Firefox */
        column-count: 1;
    }
}

/*--------------------------------------------------------------
        Story Posts
--------------------------------------------------------------*/
.nav-previous{
    padding-left:100px;
	float:left;
}
.nav-next{
    float:right;
    padding-right:100px;
}
.single .mastfoot{
    background-color: yellow;
    color:black;
    font-size:80%;
    font-family: "TradeGothicW01-BoldCn20_675334",sans-serif;
    text-align:center;
}
.post {
    text-shadow: none;
    color: black;
    text-align: left;
}

.post-text {
    max-width: 70%;
    margin: 0 auto;
}
.post-text p{
    margin: 20px 0;
}
.post a{
    font-weight: bold;
}
/*--------------------------------------------------------------
   Smaller Screen Media Query
--------------------------------------------------------------*/
@media (max-width: 800px) {
    .nav-title{
        display:none;
    }
    .nav-links .fa{
        font-size:300%;
    }
    .nav-previous,.nav-next{
        padding-left:10px;
    }
    /* Mobile Social Nav */
    .menu-social-container {
        display: none;
    }
}

/*--------------------------------------------------------------
   Icons
--------------------------------------------------------------*/
@charset "UTF-8";

@font-face {
  font-family: "iwelcome";
  src:url("assets/font/iwelcome.eot");
  src:url("assets/font/iwelcome.eot?#iefix") format("embedded-opentype"),
    url("assets/font/iwelcome.woff") format("woff"),
    url("assets/font/iwelcome.ttf") format("truetype"),
    url("assets/font/iwelcome.svg#iwelcome") format("svg");
  font-weight: normal;
  font-style: normal;

}

[data-icon]:before {
  font-family: "iwelcome" !important;
  content: attr(data-icon);
  font-style: normal !important;
  font-weight: normal !important;
  font-variant: normal !important;
  text-transform: none !important;
  speak: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

[class^="icon-"]:before,
[class*=" icon-"]:before {
  font-family: "iwelcome" !important;
  font-style: normal !important;
  font-weight: normal !important;
  font-variant: normal !important;
  text-transform: none !important;
  speak: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.icon-house-icon:before {
  content: "\61";
}

